--- a/_units/02.md
+++ b/_units/02.md
@@ -1,28 +1,28 @@
 ---
 ###
-# unit information: 
-# Unit 2: Auditory System 
+# unit information:
+# Unit 2: Auditory System
 ###
 title: The Auditory System
 number: 2
 short_description: Anatomy and physiology
-summary: In this unit we will discuss the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceptualize hearing as an actively perceiving process, more than just a passive response to a physical stimulus. We will also compare our musical system with other species, and try to understand when and why the auditory system malfunctions and how to protect our own hearing. 
-# The biological basis of hearing 
+summary: In this unit we will discuss the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceptualize hearing as an actively perceiving process, more than just a passive response to a physical stimulus. We will also compare our musical system with other species, and try to understand when and why the auditory system malfunctions and how to protect our own hearing.
+# The biological basis of hearing
 
-authors: 
+authors:
  - Psyche Loui
 topics: [Auditory Pathway, Structures and functions, Acticve Ear, Evolution of the Auditory System, Music in other Species, Hearing Damage]
-test_questions: 
+test_questions:
  - Lay out the anatomy of the auditory pathway, from the cochlea to the primary auditory cortex.
  - How does the structure of the basilar membrane reinforce its function?
  - Which of the following is most heavily implicated in being able to perceive location of sound sources?
     - inferior colliculus
     - cochlea
-    - medial geniculat enucleus 
+    - medial geniculat enucleus
     - superior olivary nuclei
- - Which of the following methods of hearing protection is the most efficient at attenuating sound? 
+ - Which of the following methods of hearing protection is the most efficient at attenuating sound?
     1. earmuffs
-    2. cottonearplugs 
+    2. cottonearplugs
     3. plasticinserts
 # we have to work on the presentation of this quiz/questions.
 
@@ -35,7 +35,7 @@ mathjax: true
 
 # How do we hear?
 
-Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system. 
+Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system.
 
 The auditory system is a set of biological structures and functions that enable you to hear. To understand this system, we will follow the pathway that sound travels from the outer ear to the cochlea. We will discuss how the cochlea transforms sound into neural impulses, which are then to be relayed in various transformations through the neural centers of the brainstem and midbrain before it is processed by the primary and secondary auditory cortices.
 
@@ -45,7 +45,7 @@ To get a sense of the evolution of the auditory system, we will also compare the
 
 Finally we look at when the auditory system malfunctions. Types of hearing loss and their origins will be discussed. We will consider the importance of hearing protection, and explore various ways to protect your ears.
 
-# The auditory pathway (ear & brain) 
+# The auditory pathway (ear & brain)
 
 The anatomy section of this unit will cover the peripheral and central auditory nervous systems, from the outer ear
 all the way up to the secondary auditory cortex. The auditory periphery includes various parts of the ear and ends
@@ -102,7 +102,7 @@ The cochlea is a coiled, fluid-filled tubular structure. It is lined with membra
 
 {% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" %}
 {% comment %} (image source: http://www.iurc.montp.inserm.fr/cric/audition/english /cochlea/fcochlea.htm) {% endcomment%}
-  
+
 A dissected cochlea of a human fetus.
 
 {% include img-figure url="/MUTOR/assets/images/cochlea_diagram.png" description="Cochlea Cross-section" %}
@@ -168,13 +168,13 @@ The auditory nerve leads out of the cochlea and into the brainstem. On the surfa
 {% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" %}
 {% comment %} Cranial nerve, with the VIIIth nerve (auditory nerve) in red.
 (image source: http://www.gwc.maricopa.edu/class/bio201) {% endcomment %}
-  
+
 Overview of the auditory pathway from the brainstem to the cortex.
 
 1. Cochlear Nuclei
 1. Superior Olive, which plays special roles in Binaural Hearing
 1. Lateral Lemniscus
-1. Inferior Colliculus, which is especially sensitive to Amplitude Modulation 
+1. Inferior Colliculus, which is especially sensitive to Amplitude Modulation
 1. Medial Geniculate Nucleus
 1. Primary Auditory Cortex
 
@@ -230,7 +230,7 @@ Modulation detection refers to the ability of the auditory system to detect rapi
 # Amplitude Modulation
 
 One of the roles of the inferior colliculus, and also the inferior colliculus, seems to be to reflect amplitude modulation (McKinney et al, 2001). Amplitude modulation refers to the change in amplitude levels, usually at periodic rates. In musical performance, playing tremolo typically results in amplitude modulation. AM radio also relies on the application of amplitude modulation.
-     
+
 {% include img-figure url="/MUTOR/assets/images/ttremolo.gif" description="Tremolo" %}
 {% comment %} Tremolo - a case of amplitude modulation
 (image source: http://www.compositiontoday.com/sound_bank {% endcomment %}
@@ -247,21 +247,21 @@ The medial geniculate nucleus contains a division that is tonotopically organize
 
 {% include img-figure url="/MUTOR/assets/images/mgn.jpg" description="Medial Geniculus Nucleus" %}
 {% comment %} The medial geniculate nuclei, shown here in green.
-(image source: http://sylvius.com)  {% endcomment %} 
+(image source: http://sylvius.com)  {% endcomment %}
 
-Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual capture and orienting. 
+Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual capture and orienting.
 
 ## Auditory Cortex
 
 The auditory cortex is located just under the sylvian fissure, which is the fold that divides the temporal lobe from the frontal and parital lobes in the brain.
 
 {% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." %}
-{% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %} 
+{% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %}
 
 The auditory cortex includes primary and secondary auditory cortices. The PrimaryAuditoryCortex (also known as A1) is located on the temporal plane, which is delineated by the Sylvian fissure on the top surface of the temporal lobe. The SecondaryAuditoryCortex (A2) surrounds the primary auditory cortex. The primary auditory cortex is tonotopically organized, with the lateral edge of the Sylvian fissure being sensitive to lower frequencies and the medial part of the cortex being sensitive to high frequencies. The primary auditory cortex is responsible for the perception of pitch, rhythm and duration, whereas the secondary auditory cortex is responsible for pattern perception, which includes the perception of speech and melodies. Persons with lesioned auditory cortices have trouble perceiving music; this is a condition known as amusia. (Peretz et al, 2003)
 
 {% include img-figure url="/MUTOR/assets/images/a1_a2.jpg" description="Auditory Cortex" %}
-{% comment %} (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html) {% endcomment %} 
+{% comment %} (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html) {% endcomment %}
 
 Primary and secondary auditory cortices. A1 is shown here in blue and A2 is in red. The primary auditory cortex is tonotopically organized.
 
@@ -294,7 +294,7 @@ response to a sound stimulus. OAE recording, in combination with the recording o
 So far we have comprehensively discussed the anatomy and physiology of the human auditory system. It is important to consider how such a complex system has evolved to enable music perception for humans today. A comparison of the auditory system between humans and other species reveal that various nonhuman mammals do have auditory system analogous to humans. Monkeys, cats, chinchillas, marmosets, rats, and various other mammals all make use of pathways in their peripheral and central nervous system, from the ear to the brain, to analyze and react to sounds, although the precise points along these pathways may differ slightly among species. Birds, fish, and amphibians are also known to have auditory pathways and to analyze sounds in a reasonably similar manner. Taken together, auditory systems in all these animals probably share the same evolutionary origins as the human auditory system.
 
 Fay and Popper (2000) argued that all vertebrate auditory systems are required to do certain basic tasks including acoustic feature discrimination, sound source localization, frequency analysis, and auditory scene analysis, among others. These sorts of capabilities arose very early in the evolution of the vertebrates and have been modified by selection in different species.
-While various animals are able to hear and have auditory systems, only a few species have evolved to make music. 
+While various animals are able to hear and have auditory systems, only a few species have evolved to make music.
 
 # Music in Other Species
 
@@ -302,7 +302,7 @@ While the act of music making is universal to all cultures in human society, onl
 
 {% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" %}
 {% comment %} (image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
-make. {% endcomment %} 
+make. {% endcomment %}
 
 The ferret and chinchilla auditory systems are similar to ours in that most of the auditory apparati are similar anatomically and functionally to the human auditory system. This makes them a good animal model to study. Bats are also of interest because of their ability to hear very high frequencies. Bats emit ultrasonic frequencies (sounds beyond our hearing range in frequency) and listen for the reflected sounds in order to determine their own location. The use of echoes to find out one's own position in space is known as echolocation.
 
@@ -311,7 +311,7 @@ Hearing damage is very prevalent, especially among rock musicians and individual
 
 Famous people suffering from hearing loss (adapted from http://www.hearnet.com/):
                                                         {% comment %} HOW TO MAKE THIS A REAL LINK? {% endcomment %}
-  
+
 - Barbra Streisand
 - Bedrich Smetana
 - Bill Clinton
@@ -321,12 +321,12 @@ Famous people suffering from hearing loss (adapted from http://www.hearnet.com/)
 - Cher
 - David Letterman
 - Cheryl Tiegs
-- Don Imus 
+- Don Imus
 - Engelbert Humperdinck
 - Pete Townshend from The Who speaks about hearing loss
 - Clive Barker
 - Dwight D. Eisenhower
-- Eric Clapton 
+- Eric Clapton
 - Jean-Jacques Rousseau
 - Jeff Beck
 - Keanu Reeves
@@ -351,7 +351,7 @@ Famous people suffering from hearing loss (adapted from http://www.hearnet.com/)
 - Peter Jennings
 - Phil Collins
 - Richard Thomas
-- Rick Emmett 
+- Rick Emmett
 - Robert Schumann
 - Roger Miller
 - Rosalynn Carter
@@ -393,9 +393,9 @@ Ranges of hearing loss:
     <audio controls src="/MUTOR/assets/audios/audiogram.mp3">
       Your browser does not support the audio element.
     </audio>
-    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
   </body>
 </html>
+Demo Normal Hearing vs. High-Frequency Hearing loss (Source: `[Handbook for Acoustic Ecology (Barry Truax, 1999)](https://www.sfu.ca/sonic-studio-webdav/handbook/Audiogram.html)`)
 
 The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
 
