--- a/_units/03.md
+++ b/_units/03.md
@@ -1,13 +1,13 @@
 ---
 ###
-# unit information: 
+# unit information:
 # Unit 3: Fundamentals of Psychoacoustics
 ###
 title: Fundamentals of Psychoacoustics
 number: 3
 short_description: This unit is concerned with how sounds interact with the world and the influence knowledge and understanding can exert. One important distinction to make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing manifested in loudness perception and room acoustics, which, in turn, are also dependent on Top-Down knowledge. Auditory illusions caused by a mismatch between Top-Down and Bottom-Up signals will be discussed as well.
 summary: In the previous unit, we discussed sound largely in the abstract, whereas here we have seen that the environment and our auditory system both play a large role in our perception and understanding of the sonic world around us. It is not enough to say that a signal has an amplitude of 0.5—as we have seen, this will mean different things depending on the frequency. From the bottom-up, we can say that the signal has an amplitude of 0.5 and that the loudness will vary depending on the frequency due to the fact that our auditory system is more sensitive at certain frequencies than others; from the top-down, our knowledge of the origin of the sound source (what made it, where it comes from, etc.) may influence the way in which we hear the signal. This top-down processing can lead to interesting auditory illusions such as the McGurk effect, the Franssen effect, and the Clifton effect. Finally, the acoustic environment and how much reverberation that environment adds to a sound dramatically alters the way in which perceive sounds.
-authors: 
+authors:
  - Psyche Loui and John MacCallum
 topics: [Elementary Psychoacoustics, Bottom-Up vs. Top-Down, Loudness, Reverberation, Perceptual Illusions, Precedence Effect, Audio-Visual Interaction]
 test_questions:
@@ -41,7 +41,7 @@ mathjax: true
 
 # Introduction
 In the previous unit we introduced various physical properties of the sound stimulus. We saw that frequency, amplitude, phase, temporal envelopes, and spectral envelopes are all useful descriptors of sounds, and that different visual representations may contain useful information about these sound properties.
-But how do these physical descriptions relate to how you actually hear? In other words, how does our perception of a physical stimulus depend upon its context? 
+But how do these physical descriptions relate to how you actually hear? In other words, how does our perception of a physical stimulus depend upon its context?
 In this unit we are primarily concerned with how sounds interact with the world, and the ways with which they can be influenced by our long-term knowledge and understanding. One important distinction we make is between the Bottom-Up and Top-Down perspectives of perception. Bottom-Up processing gives rise to some signal processing (such as the extraction of frequency, reverberation, and some issues explored in Elementary Psychoacoustics. Loudness perception and room acoustics are two topics that receive important information from the Bottom-Up perspective, but are heavily dependent on Top-Down knowledge as well. This unit will also investigate the cases involving mismatch between Top-Down and Bottom-Up signals, which give rise to the Precedence Effect, the Ventriloquism Effect, and other perceptual phenomena and illusions.
 
 # Sound Ecology
@@ -51,18 +51,18 @@ An analogy of the auditory system's ability to construct a picture of the world 
 
 {% include img-figure url="/MUTOR/assets/images/unit3_lakescene.png" description="Lake Scene" %}
 
-Here is the surface of an irregularly-shaped lake, with two inlets coming out of its side. A fishing bob is floating on each of the inlets. 
-Now suppose you are only allowed to look at the fishing bobs, but you must answer the following questions: 
+Here is the surface of an irregularly-shaped lake, with two inlets coming out of its side. A fishing bob is floating on each of the inlets.
+Now suppose you are only allowed to look at the fishing bobs, but you must answer the following questions:
 1. How many ducks are there?
 2. Which way are the people swimming?
-3. Which is closer to you, the sailing boat or the swimmers? 
+3. Which is closer to you, the sailing boat or the swimmers?
 When only given information from the two fishing bobs, it may seem impossible to answer all these questions. Surprisingly, our auditory system seems to have little trouble given a similar problem. Although we have only two ears, the information we can glean from these two input receivers is powerful enough to infer many things about the environment. The auditory system's ability to use sounds to understand the environment is termed by Bregman (1990/1994) as Auditory Scene Analysis.
 
 # Elementary Psychoacoustics
 
-Much of the findings we present in this course come from studies in psychoacoustics. Psychoacoustics is the study of hearing and sound. This includes the study of the mechanisms enabling the auditory system to detect and identify sounds, and the roles of various aspects of sound on auditory perception. 
-The study of psychoacoustics is predicated upon knowledge of the signal. This entails a characterization of parameters such as the amplitude, source location, and spectral and temporal properties of the sound stimuli. Knowledge of the sound signal is necessary for answering questions that can be raised in order to understand hearing. 
-For example, here is one simple question that a psychoacoustician might ask: how loud does a tone have to be before it is heard? This question can be addressed using a simple signal detection test, where the listener is presented with many trials. Each trial may contain either a tone in a noisy background (signal-plus-noise trial), or background noise only (noise trial). After hearing each trial, the listener must decide whether they heard a noise trial or a signal-plus-noise trial. This test, known as the tone-detection-in-noise task, is one of the simplest of psychoacoustical methods. The accuracy of the listener's performance, as measured either by the percent of correct responses (PC, or Percent Correct) or by the listener's sensitivity (d' score, or discriminability as determined by SignalDetectionTheory methods), gives the psychoacoustician an idea of the signal-to-noise ratio necessary for a listener to reliably detect the tone. As you can see from the discussion in this unit on LoudnessPerception, the answer to such a simple question can be a complex one, and may depend on other variables such as the frequency and location of the signal. 
+Much of the findings we present in this course come from studies in psychoacoustics. Psychoacoustics is the study of hearing and sound. This includes the study of the mechanisms enabling the auditory system to detect and identify sounds, and the roles of various aspects of sound on auditory perception.
+The study of psychoacoustics is predicated upon knowledge of the signal. This entails a characterization of parameters such as the amplitude, source location, and spectral and temporal properties of the sound stimuli. Knowledge of the sound signal is necessary for answering questions that can be raised in order to understand hearing.
+For example, here is one simple question that a psychoacoustician might ask: how loud does a tone have to be before it is heard? This question can be addressed using a simple signal detection test, where the listener is presented with many trials. Each trial may contain either a tone in a noisy background (signal-plus-noise trial), or background noise only (noise trial). After hearing each trial, the listener must decide whether they heard a noise trial or a signal-plus-noise trial. This test, known as the tone-detection-in-noise task, is one of the simplest of psychoacoustical methods. The accuracy of the listener's performance, as measured either by the percent of correct responses (PC, or Percent Correct) or by the listener's sensitivity (d' score, or discriminability as determined by SignalDetectionTheory methods), gives the psychoacoustician an idea of the signal-to-noise ratio necessary for a listener to reliably detect the tone. As you can see from the discussion in this unit on LoudnessPerception, the answer to such a simple question can be a complex one, and may depend on other variables such as the frequency and location of the signal.
 
 Some other questions psychoacousticians might ask are: (according to psychoacoustician Chris Plack)
 How do we separate sounds occurring simultaneously (e.g. two speakers speaking at once)?
@@ -72,9 +72,9 @@ These questions have obvious importance for composers and musicians. Later chapt
 
 # Signal Detection Theory
 
-Threshold-finding models addressing this question have given way to the use of Signal Detection Theory to obtain a reliable criterion of signal detectability. Signal Detection Theory provides a bias-free measure of sensitivity to any stimulus. 
+Threshold-finding models addressing this question have given way to the use of Signal Detection Theory to obtain a reliable criterion of signal detectability. Signal Detection Theory provides a bias-free measure of sensitivity to any stimulus.
 
-Simple signal detection theory assumes two Gaussian distributions of signal trials and noise trials respectively. Given some amount of evidence of the signal, plotted on the x axis (or "internal response" as shown in the graph), the observer must decide on the probability that the evidence points to a signal trial or a noise trial. The observer then adopts a criterion (shown as the thick line labeld "criterion response"). Any trial for which the internal response exceeds the criterion is categorized as "signal", and any trial for which the internal response is below criterion is categorized as "noise". 
+Simple signal detection theory assumes two Gaussian distributions of signal trials and noise trials respectively. Given some amount of evidence of the signal, plotted on the x axis (or "internal response" as shown in the graph), the observer must decide on the probability that the evidence points to a signal trial or a noise trial. The observer then adopts a criterion (shown as the thick line labeld "criterion response"). Any trial for which the internal response exceeds the criterion is categorized as "signal", and any trial for which the internal response is below criterion is categorized as "noise".
 
 {% include img-figure url="/MUTOR/assets/images/unit3_sdt1.gif" description="Signal Detection Theory illustration" %}
 
@@ -83,10 +83,10 @@ The following are true given the above situation:
 "misses" are trials that fall under the signal distribution and are incorrectly labeled "noise";
 "correct rejections" are trials under the noise distribution that are correctly labeled "noise"; and
 "false alarms" are trials under the noise distribution that are incorrectly labeled "signal".
-d' is a measure of sensitivity, given by the distance between the means of the two distributions. 
+d' is a measure of sensitivity, given by the distance between the means of the two distributions.
 d' = z(hit) - z(false alarm),
-where z is the deviation of the criterion from the mean, given in standard units (z-scores). 
-Since d' is a measurement of how far apart the two distributions are, a higher d' means that signal trials and noise trials are very clearly separated; thus, higher d' signifies better performance. 
+where z is the deviation of the criterion from the mean, given in standard units (z-scores).
+Since d' is a measurement of how far apart the two distributions are, a higher d' means that signal trials and noise trials are very clearly separated; thus, higher d' signifies better performance.
 
 {% include img-figure url="/MUTOR/assets/images/unit3_sdt2.gif" description="SDT Criterion" %}
 
@@ -111,7 +111,7 @@ Very often, we need to know how loud a sound is; although this seems like a very
 
 ## Intensity
 
-The intensity of a sound is proportional to the square of the amplitude and is measured in watts per meter^2 
+The intensity of a sound is proportional to the square of the amplitude and is measured in watts per meter^2
 
 \begin{equation}
 I=\frac{P}{A}
@@ -129,7 +129,7 @@ dB=20log_{10}(\frac{A}{A_0})
 \label{eq:dB-amplitude}
 \end{equation}
 
-for amplitude, where A_0 is some reference amplitude, and 
+for amplitude, where A_0 is some reference amplitude, and
 
 \begin{equation}
 dB=10log_{10}(\frac{I}{I_0})
@@ -370,7 +370,7 @@ Figure 1: Some common sounds and their volumes represented in dB (http://en.wiki
 
 ## Loudness And Frequency
 
-Although much information about the nature of sounds can be gleaned by studying their amplitudes, intensities, etc. this information does not always tell us the whole story about how loud we will perceive a sound to be. Listen to the following two tones, the first at 100Hz and the second at 2000Hz. Although they both have the same amplitude, does one of them seem louder? 
+Although much information about the nature of sounds can be gleaned by studying their amplitudes, intensities, etc. this information does not always tell us the whole story about how loud we will perceive a sound to be. Listen to the following two tones, the first at 100Hz and the second at 2000Hz. Although they both have the same amplitude, does one of them seem louder?
 
 {% include img-figure url="/MUTOR/assets/images/MUTOR_Loudness1.png" description="loudness1 demo" %}
 
@@ -404,7 +404,7 @@ where Psi is the measure of loudness of a single tone, I is the intensity (W/m^2
 
 ## Loudness Of Multiple Pitches
 
-If we hear two tones simultaneously that are separated in frequency by more than a critical band (We will discuss the critical band in detail in the next unit. For now, a good rule of thumb is that the critical band is approximately 1/3 of an octave.), the resulting loudness will be approximately equal to the sum of the loudness of each component. If, however, the two tones are within a critical band, the loudness can be approximated by applying Stephens' power law to the intensity of the sum of the loudnesses. Note that because the power in Stephens' power law is less than 1, the loudness of two closely spaced tones will be less than that of two tones well separated in frequency assuming equal amplitudes for all of the freqencies. 
+If we hear two tones simultaneously that are separated in frequency by more than a critical band (We will discuss the critical band in detail in the next unit. For now, a good rule of thumb is that the critical band is approximately 1/3 of an octave.), the resulting loudness will be approximately equal to the sum of the loudness of each component. If, however, the two tones are within a critical band, the loudness can be approximated by applying Stephens' power law to the intensity of the sum of the loudnesses. Note that because the power in Stephens' power law is less than 1, the loudness of two closely spaced tones will be less than that of two tones well separated in frequency assuming equal amplitudes for all of the freqencies.
 
 {% include img-figure url="/MUTOR/assets/images/MUTOR_Loudness2.png" description="loudness2" %}
 
@@ -418,7 +418,7 @@ The signal with multiple harmonics sounds louder than the pure tone because our 
 
 The spectral integration that our ear performs is an important feature of the way in which we perceive many orchestral instruments, especially the brass instruments. Figure 3 is a sonogram of a tuba playing an A3 starting moderately loud (mf), getting quieter, and then getting louder. Notice that the fundamental (the lowest line in the sonogram) doesn't change amplitude much, but rather, the change in volume comes from the addition of upper partials.
 
-{% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="A tuba playing A3 going from moderately loud to soft to loud." %} 
+{% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="A tuba playing A3 going from moderately loud to soft to loud." %}
 <html>
   <head>
     <title>A tuba playing A3 going from moderately loud to soft to loud</title>
@@ -500,7 +500,7 @@ As these early reflections continue to bounce off the surfaces they begin to pil
 
 A More In-Depth Look at Reverberation
 
-Our perception of a sound is influenced in many ways by the distance it must travel to reach our ears. Since sound travels at 344 meters per second (1129 feet per second), the time it takes for a sound to travel from source to listener can be calculated by 
+Our perception of a sound is influenced in many ways by the distance it must travel to reach our ears. Since sound travels at 344 meters per second (1129 feet per second), the time it takes for a sound to travel from source to listener can be calculated by
 
 \begin{equation}
 d=\frac{r}{344m/s}
@@ -546,12 +546,12 @@ Sound examples 1-3, and figures 3.20 - 3.22 are impulse responses of three diffe
 <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
 Your browser does not support the audio element.
 </audio>
-    
+
 {% include img-figure url="/MUTOR/assets/images/unit3_impulse2-specgram-decayenv.png" description="The reverb decays of three different rooms: response 2." %}
 <audio controls src="/MUTOR/assets/audios/unit3_impulse2.wav">
 Your browser does not support the audio element.
 </audio>
-    
+
  {% include img-figure url="/MUTOR/assets/images/unit3_impulse3-specgram-decayenv.png" description="The reverb decays of three different rooms: response 3." %}
 <audio controls src="/MUTOR/assets/audios/unit3_impulse3.wav">
 Your browser does not support the audio element.
@@ -563,12 +563,12 @@ http://www.cksde.com/p_6_250.htm
 
 # Top-Down
 
-While Bottom-Up perspectives of perception refer to the stimulus-driven processing of sounds beginning from the periphery of the auditory system, Top-Down perspectives begin with the higher-level mental processes that are accessible to the human mind. Top-Down processes may include our knowledge of the context of a piece of music, our memory of related musical pieces, the cognitive effort of paying attention to certain aspects of the stimulus, and our emotional state during the perception of music. 
+While Bottom-Up perspectives of perception refer to the stimulus-driven processing of sounds beginning from the periphery of the auditory system, Top-Down perspectives begin with the higher-level mental processes that are accessible to the human mind. Top-Down processes may include our knowledge of the context of a piece of music, our memory of related musical pieces, the cognitive effort of paying attention to certain aspects of the stimulus, and our emotional state during the perception of music.
 
 One example of top-down knowledge is the understanding of a musical allusion - i.e. knowing the source material from which another musical work is quoting. This can often influence how the music is perceived. A famous case of a musical allusion is in the third movement of Mahler's First Symphony.
 
 
-Children's song "Frère Jacques" 
+Children's song "Frère Jacques"
 <html>
   <head>
     <title>Larry</title>
@@ -581,38 +581,32 @@ Children's song "Frère Jacques"
 </html>
 
 The opening measures of Mahler's Symphony No. 1 in D, "Titan".
-<html>
-  <head>
-    <title>Larry</title>
-  </head>
-  <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_mahler1.mp3">
-      Your browser does not support the audio element.
-    </audio>
-  </body>
-</html>
 
-Mahler quoted the melody from the traditional children's song Frère Jacques, but transposed it into the minor mode. An especially eerie and intriguing effect is achieved when the audience recognizes the source of the musical quotation. Thus the perception of the mood of this piece is enhanced by top-down knowledge. 
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4XbHLFkg_Mw?t=1504" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+Mahler quoted the melody from the traditional children's song Frère Jacques, but transposed it into the minor mode. An especially eerie and intriguing effect is achieved when the audience recognizes the source of the musical quotation. Thus the perception of the mood of this piece is enhanced by top-down knowledge.
 
 Another example is the effects of visual information on the perception of musical sounds. In an audiovisual environment, information received by the visual and auditory systems interact in important ways. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing.
 
 # Perceptual Illusions
 
-Top-Down perspectives influence Bottom-Up processing in many important ways. Compare the heights of the two people in the following picture. 
+Top-Down perspectives influence Bottom-Up processing in many important ways. Compare the heights of the two people in the following picture.
 
 {% include img-figure url="/MUTOR/assets/images/unit3_topdownillusion.jpg" description="Top Down." %}
 
 Although the two persons are identical in actual size, the figure closer to the bottom of the picture is perceived as being smaller than the other person. This is because of top-down inference of the higher person being further away, and our knowledge of linear perspective playing a role in the picture leads us to infer that the further figure is larger. If the background context is removed, the illusion disappears and we perceive both people as of similar size.
 
 {% include img-figure url="/MUTOR/assets/images/unit3_topdownillusion2.jpg" description="Perceptual illusion corrected" %}
- 
+
 Perceptual illusions like this one often rely on the unconscious inference of contextual cues, which is based on top-down knowledge of naturalistic scenes.
 
 # Melodic Processes
 
-The effects of Top-Down processing are not limited to the perception of visual illusions. Top-Down, cognitively-driven processing of sounds is equally important in auditory perception. Psychoacoustical studies have shown that the perception of loudness depends on top-down factors. For example, shouting from afar is perceived as being louder than whispering from nearby, even if the absolute levels of the sound signals are the same. This is because the auditory system makes use of cues such as timbre, source location (which may include reverb), and any visual information available (see AudioVisualInteraction), in order to adjust the experience of the sound signal coming from Bottom-Up processes. The Top-Down modulation of Bottom-Up processing serves important evolutionary advantage, as some knowledge of the relative importance of sounds is necessary for the mind to effectively process and prioritze information so to ensure survival. 
+The effects of Top-Down processing are not limited to the perception of visual illusions. Top-Down, cognitively-driven processing of sounds is equally important in auditory perception. Psychoacoustical studies have shown that the perception of loudness depends on top-down factors. For example, shouting from afar is perceived as being louder than whispering from nearby, even if the absolute levels of the sound signals are the same. This is because the auditory system makes use of cues such as timbre, source location (which may include reverb), and any visual information available (see AudioVisualInteraction), in order to adjust the experience of the sound signal coming from Bottom-Up processes. The Top-Down modulation of Bottom-Up processing serves important evolutionary advantage, as some knowledge of the relative importance of sounds is necessary for the mind to effectively process and prioritze information so to ensure survival.
 
-Top-Down influences also play important roles in the perception of more complex musical attributes. In his Implication-Realization model, Narmour (1990) laid out various principles of top-down influences on melodic perception, in which our top-down expectations for how melodies tend to sound may influence our experience of melodies. Narmour specifically discusses these top-down expectations in terms of intervals in a melody. Based on the general knowledge of perceptual organization, we tend to expect small intervals in one direction to follow large intervals in the opposite direction. The melodic process of large intervals being followed by smaller intervals in the opposite direction, also known as gap fill, is found in most popular tunes. 
+Top-Down influences also play important roles in the perception of more complex musical attributes. In his Implication-Realization model, Narmour (1990) laid out various principles of top-down influences on melodic perception, in which our top-down expectations for how melodies tend to sound may influence our experience of melodies. Narmour specifically discusses these top-down expectations in terms of intervals in a melody. Based on the general knowledge of perceptual organization, we tend to expect small intervals in one direction to follow large intervals in the opposite direction. The melodic process of large intervals being followed by smaller intervals in the opposite direction, also known as gap fill, is found in most popular tunes.
 
 {% include note author="gh" text="In some papers I-R is described as bottom-up process. This needs to be clarified" %}
 
@@ -626,10 +620,10 @@ The Precedence Effect, also known as the Haas Effect or the Law of the First Wav
 The precedence effect can be demonstrated using stereo stereo speakers presenting pairs of click sounds. When two clicks are presented from opposite speakers within a very short time of each other, where the first click is called the "lead" and the second is the "lag", we tend to perceive the sound source to be from the "lead". The "lag" is perceived as an echo. If the location of the lead and lag are switched (i.e. the speaker that was playing the later click in the pair, now plays the first click), then the new location is perceived as a sound source. Thus, the first sound to reach the ears is always perceived as the location of the sound source.
 
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
-Precedence Effect Demonstration (requires stereo headphones) 
+Precedence Effect Demonstration (requires stereo headphones)
 (source: http://www.parmly.luc.edu/parmly/clifton.html)
 
-The precedence effect may be due to top-down influences on the auditory system. As it is ecologically unlikely for two very similar sound sources to be coming from opposite directions, the second click (the "lag") is perceived not as a new source of sound, but as an echo of the first click (the "lead"). The fact that echoes are not perceived as sound sources is known as echo suppression. 
+The precedence effect may be due to top-down influences on the auditory system. As it is ecologically unlikely for two very similar sound sources to be coming from opposite directions, the second click (the "lag") is perceived not as a new source of sound, but as an echo of the first click (the "lead"). The fact that echoes are not perceived as sound sources is known as echo suppression.
 
 see also: Franssen Effect, Clifton Effect
 
@@ -648,7 +642,7 @@ The Franssen Effect. If a rapid-onset tone is presented at the left speaker and 
 
 ## Clifton Effect
 
-The Clifton Effect is a change to the classical Precedence Demonstration. This change is described in the figure below. Again, pairs of clicks are presented with one slightly preceding the other (the first click is the "source"; the second is the "echo".) Half way into the click train, the source and echo clicks are reversed. That is, halfway through the demonstration the loudspeaker that had delivered the first or source click now delivers the delayed or echo click and vice versa. In the Clifton Effect, an unexpected percept occurrs immediately after the switch, where two clicks are perceived often coming from the location of each loudspeaker. Then after 4 or 5 more click-pair presentations following the switch, a single click is again perceived and its location is now at the loudspeaker presenting the lead click, which is the opposite loudspeaker from that which produced the lead click for the first half of the click train. Most listeners tend to hear two clicks at the beginning of the click train, then fusion occurs, then after the switch two clicks are heard, and then finally fusion reoccurs but at the location of the other loudspeaker. That is, after the switch there is a temporary cessation or breakdown of the Precedence Effect; fusion and/or echo suppression stops. This breakdown occurred because of the prior exposure you had during the first half of the click train. Thus, your experience with the source and echo clicks somehow influenced your perception after the source and echo clicks were switched. Eventually however, echo suppression reoccurs and the Precedence Effect works as before. This demonstration suggests that echo processing might depend on our listening experience in the reflective spaces that we are currently in. 
+The Clifton Effect is a change to the classical Precedence Demonstration. This change is described in the figure below. Again, pairs of clicks are presented with one slightly preceding the other (the first click is the "source"; the second is the "echo".) Half way into the click train, the source and echo clicks are reversed. That is, halfway through the demonstration the loudspeaker that had delivered the first or source click now delivers the delayed or echo click and vice versa. In the Clifton Effect, an unexpected percept occurrs immediately after the switch, where two clicks are perceived often coming from the location of each loudspeaker. Then after 4 or 5 more click-pair presentations following the switch, a single click is again perceived and its location is now at the loudspeaker presenting the lead click, which is the opposite loudspeaker from that which produced the lead click for the first half of the click train. Most listeners tend to hear two clicks at the beginning of the click train, then fusion occurs, then after the switch two clicks are heard, and then finally fusion reoccurs but at the location of the other loudspeaker. That is, after the switch there is a temporary cessation or breakdown of the Precedence Effect; fusion and/or echo suppression stops. This breakdown occurred because of the prior exposure you had during the first half of the click train. Thus, your experience with the source and echo clicks somehow influenced your perception after the source and echo clicks were switched. Eventually however, echo suppression reoccurs and the Precedence Effect works as before. This demonstration suggests that echo processing might depend on our listening experience in the reflective spaces that we are currently in.
 
 {% include img-figure url="/MUTOR/assets/images/unit3_clifton.gif" description="Clifton Effect" %}
 (image source: http://www.parmly.luc.edu/parmly/clifton.html)
@@ -665,14 +659,14 @@ In the Clifton demonstration the two clicks are always seperated by 12 ms and th
   </body>
 </html>
 
-Clifton Effect Demonstration (requires stereo headphones) 
+Clifton Effect Demonstration (requires stereo headphones)
 (source: http://www.parmly.luc.edu/parmly/clifton.html)
 
 # Audio-visual Interaction
 
-So far we have discussed the auditory system's processing of sounds and its various dimensions, such as frequency and amplitude. We have also started to touch on the interactions between different auditory dimensions, such as the interaction between frequency and loudness as shown by the Fletcher-Munson curves. However, music is not just a series of auditory stimuli. Information from other modalities, such as vision and touch, also play important roles in the musical experience. What is seen can influence what is heard, and this is especially true from a Top-Down perspective. 
+So far we have discussed the auditory system's processing of sounds and its various dimensions, such as frequency and amplitude. We have also started to touch on the interactions between different auditory dimensions, such as the interaction between frequency and loudness as shown by the Fletcher-Munson curves. However, music is not just a series of auditory stimuli. Information from other modalities, such as vision and touch, also play important roles in the musical experience. What is seen can influence what is heard, and this is especially true from a Top-Down perspective.
 
-Soundtracks in movies offer one case of auditory perception enhancing visual perception. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing. In one particular study by Marilyn Boltz (2001), video clips were paired with positive, neutral, and negative soundtracks and shown to study participants. After viewing the films, participants were asked to rate how well certain adjectives described the content of the video (e.g. "What adjective best describes the man's intentions for following the womann? benevolent / malevolent") 
+Soundtracks in movies offer one case of auditory perception enhancing visual perception. The use of sound effects and soundtracks in the film industry relies heavily on AudioVisualInteraction, and much research has shown that auditory, visual, and tactile sensations influence each other in perceptual as well as cognitive processing. In one particular study by Marilyn Boltz (2001), video clips were paired with positive, neutral, and negative soundtracks and shown to study participants. After viewing the films, participants were asked to rate how well certain adjectives described the content of the video (e.g. "What adjective best describes the man's intentions for following the womann? benevolent / malevolent")
 Participants rated videos with positive soundtracks as being better described by positive adjectives, and videos with negative soundtracks using negative adjectives. Videos with no soundtracks were rated as relatively neutral. This study shows strong effects of musical stimuli on the perception of meaning and emotional content of visual scenes.
 
 {% include img-figure url="/MUTOR/assets/images/unit3_boltz.jpg" description="Boltz soundtrack study" %}
@@ -699,16 +693,16 @@ http://www.paulzerdin.com/
     </video>
   </body>
 </html>
-  
-(video source: http://www.paulzerdin.com) 
+
+(video source: http://www.paulzerdin.com)
 (see also http://video.google.com/videoplay?docid=8126344216754570223&q=ventriloquist+is%3Afree+duration%3Ashort&pr=goog-sl)
 Ventriloquism relies on the brain's tendency to integrate auditory information to agree with the visual system. In a ventrilquism act, the ventriloquist moves the puppet's mouth while talking without moving his/her lips. Because the puppet is moving while the performer is not, we localize the sound source to the puppet instead of the ventriloquist; thus, we perceive the speech as coming from the puppet.
 
 ## McGurk Effect
 
-When the auditory and visual systems are uncorrelated, visual capture (such as the VentriloquismEffect) is a typical result. There are some cases, however, when visual capture does not occur. Instead, the brain takes input from both auditory and visual systems, and integrates them to create a unique multimodal percept which is different from either the visual or auditory stimulus alone. 
+When the auditory and visual systems are uncorrelated, visual capture (such as the VentriloquismEffect) is a typical result. There are some cases, however, when visual capture does not occur. Instead, the brain takes input from both auditory and visual systems, and integrates them to create a unique multimodal percept which is different from either the visual or auditory stimulus alone.
 
-In the lab it is possible to create situations in which the visual and auditory percepts do not match. 
+In the lab it is possible to create situations in which the visual and auditory percepts do not match.
 
 <html>
   <head>
@@ -722,7 +716,7 @@ In the lab it is possible to create situations in which the visual and auditory 
 </html>
 (video source: http://www.media.uio.no/personer/arntm/McGurk_english.html)
 
-A demonstration of the McGurk Effect. To experience the McGurk Effect, play this video clip in three different ways: 
+A demonstration of the McGurk Effect. To experience the McGurk Effect, play this video clip in three different ways:
 normally: both watching and listening to the video (fused condition)
 with your eyes shut but while listening to the clip (auditory condition)
 with your eyes open but with the sound turned off (visual condition)
@@ -751,11 +745,11 @@ RM Schafer. (1993) Soundscape: Our Sonic Environment and the Tuning of the World
 
 Bregman, A.S. (1994). Auditory Scene Analysis. MIT Press
 
-Clifton, R. K. 1987. Breakdown of echo suppression in the precedence effect. Journal of the Acoustical Society of America, 82(5), 1834-1835. 
+Clifton, R. K. 1987. Breakdown of echo suppression in the precedence effect. Journal of the Acoustical Society of America, 82(5), 1834-1835.
 
 Blauert, J. 1983. Spatial Hearing. Cambridge, MA: MIT Press.
 
-Dent, Tollin, & Yin. 2004. Cats exhibit the Franssen Effect illusion. JASA, 116(5), 3070-3074. 
+Dent, Tollin, & Yin. 2004. Cats exhibit the Franssen Effect illusion. JASA, 116(5), 3070-3074.
 
 Wickens, Thomas D. 2001. Elementary Signal Detection Theory. Oxford University Press.
 
