Embed Youtube videos

--- a/_units/03.md
+++ b/_units/03.md
@@ -683,19 +683,10 @@ When an audio-visual mismatch occurs, the brain may decide to reinterpret inform
 One demosntration of AudioVisualInteraction, especially of the visual capture of auditory stimuli, is the case of ventriloquism.
 http://www.paulzerdin.com/
 
-<html>
-  <head>
-    <title>Ventriloquism</title>
-  </head>
-  <body>
-    <video controls src="/MUTOR/assets/videos/unit3_babyvent.mpg">
-      Your browser does not support the audio element.
-    </video>
-  </body>
-</html>
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/x0Risja32t8?t=2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
-(video source: http://www.paulzerdin.com)
-(see also http://video.google.com/videoplay?docid=8126344216754570223&q=ventriloquist+is%3Afree+duration%3Ashort&pr=goog-sl)
 Ventriloquism relies on the brain's tendency to integrate auditory information to agree with the visual system. In a ventrilquism act, the ventriloquist moves the puppet's mouth while talking without moving his/her lips. Because the puppet is moving while the performer is not, we localize the sound source to the puppet instead of the ventriloquist; thus, we perceive the speech as coming from the puppet.
 
 ## McGurk Effect
@@ -704,17 +695,9 @@ When the auditory and visual systems are uncorrelated, visual capture (such as t
 
 In the lab it is possible to create situations in which the visual and auditory percepts do not match.
 
-<html>
-  <head>
-    <title>McGurk</title>
-  </head>
-  <body>
-    <video controls src="/MUTOR/assets/videos/unit3_McGurk_large.mp4">
-      Your browser does not support the video element.
-    </video>
-  </body>
-</html>
-(video source: http://www.media.uio.no/personer/arntm/McGurk_english.html)
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aFPtc8BVdJk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 A demonstration of the McGurk Effect. To experience the McGurk Effect, play this video clip in three different ways:
 normally: both watching and listening to the video (fused condition)
